# mascot_pet

./: .gitignore  Cargo.toml  README-user.en.txt  README-user.txt  README.md  build.rs  convert_anim.ps1  voice.en.toml  voice.toml
.cargo/: config.toml
.github/workflows/: release.yml
assets/anim/: angry.vrma  catch_on_front.vrma  catch_on_up.vrma  crying.vrma  ending_dance.vrma  falling_end.vrma  hanging.vrma  idle.vrma  jumping_up.vrma  on_falling.vrma  run.vrma  run_with_cargo.vrma  salute.vrma  simple_dance.vrma  simple_dance_2.vrma  sleeping_idle.vrma  typing.vrma  walking.vrma
examples/: voice_probe.rs
scripts/: fetch-deps.ps1  package.ps1
src/: main.rs  platform.rs  voice.rs
