[package]
name = "ai_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.29"
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[profile.release]
opt-level = 3
