[package]
name = "ai_agent"
version = "0.1.3"
edition = "2021"

[dependencies]
bevy = "0.18"
# VRM 1.0 + VRMA анимации, spring-bones, LookAt::Cursor из коробки
bevy_vrm1 = "0.7"
cpal = "0.15"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
vosk = "0.3.1"

# Детекция активности пользователя (idle-время, активное окно/процесс)
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
]

# Ускоряем рантайм в debug: наш код -O1, зависимости (Bevy) -O3.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
